==> china-djyos/djyos/bsp/cpudrv/stm32/f1/src/spi/cpu_peri_spi.c <==
#include "string.h"
#include "djyos.h"
#include "cpu_peri.h"
#include "int.h"
#include "spibus.h"
#include "math.h"
#include "stm32f1xx_hal.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_SPI    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_SPI_BUF_LEN               128       //"SPI缓冲区大小",
#define CFG_SPI1_ENABLE               false     //"是否使用SPI1",
#define CFG_SPI2_ENABLE               false     //"是否使用SPI2",
#define CFG_SPI3_ENABLE               false     //"是否使用SPI3",
#define CN_TIMEOUT  (200*1000)
#define tagSpiReg SPI_TypeDef

static void __SPI_SetClk(volatile tagSpiReg *Reg,u32 Fre)
{
    u8 br;
    br = (u8)__SPI_BrCal(Fre);
    Reg->CR1 &= ~SPI_CR1_SPE;
    Reg->CR1 &= ~SPI_CR1_BR;
    Reg->CR1 |= br<<3;
}

static void __SPI_Config(volatile tagSpiReg *Reg,tagSpiConfig *ptr)
{
    __SPI_SetClk(Reg,ptr->Freq);

    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        Reg->CR1 |= SPI_CR1_CPHA;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CPHA;
    }
    //set the cpol
    if(ptr->Mode & SPI_CPOL)
    {
        Reg->CR1 |= SPI_CR1_CPOL;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CPOL;
    }

    if(ptr->CharLen == 16)
    {
        Reg->CR1 |= SPI_CR1_DFF;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_DFF;
    }
    if(ptr->ShiftDir == SPI_SHIFT_LSB)
    {
        Reg->CR1 |= SPI_CR1_LSBFIRST;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_LSBFIRST;
    }
}

static void __SPI_HardConfig(u32 BaseAddr)
{
    u32 SPIPort = __SPI_GetPoart(BaseAddr);
    
    switch (SPIPort)
    {
        case CN_SPI1:
            __HAL_RCC_SPI1_CLK_ENABLE();
            break;

        case CN_SPI2:
            __HAL_RCC_SPI2_CLK_ENABLE();
            break;

        case CN_SPI3:
            __HAL_RCC_SPI3_CLK_ENABLE();
            break;

        default:
            break;
    }

    SPI_Handler[SPIPort].Instance=BaseAddr;
    //    Mode不能直接写SPI_MODE_MASTER或SPI_MODE_SLAVE，以为spibus中也定义了一样的宏
    SPI_Handler[SPIPort].Init.Mode=SPI_CR1_MSTR | SPI_CR1_SSI;             //设置SPI工作模式，设置为主模式
    SPI_Handler[SPIPort].Init.Direction=SPI_DIRECTION_2LINES;   //设置SPI单向或者双向的数据模式:SPI设置为双线模式
    SPI_Handler[SPIPort].Init.DataSize=SPI_DATASIZE_8BIT;       //设置SPI的数据大小:SPI发送接收8位帧结构
    SPI_Handler[SPIPort].Init.CLKPolarity=SPI_POLARITY_HIGH;    //串行同步时钟的空闲状态为高电平
    SPI_Handler[SPIPort].Init.CLKPhase=SPI_PHASE_2EDGE;         //串行同步时钟的第二个跳变沿（上升或下降）数据被采样
    SPI_Handler[SPIPort].Init.NSS=SPI_NSS_SOFT;                 //NSS信号由硬件（NSS管脚）还是软件（使用SSI位）管理:内部NSS信号有SSI位控制
    SPI_Handler[SPIPort].Init.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256;//定义波特率预分频的值:波特率预分频值为256
    SPI_Handler[SPIPort].Init.FirstBit=SPI_FIRSTBIT_MSB;        //指定数据传输从MSB位还是LSB位开始:数据传输从MSB位开始
    SPI_Handler[SPIPort].Init.TIMode=SPI_TIMODE_DISABLE;        //关闭TI模式
    SPI_Handler[SPIPort].Init.CRCCalculation=SPI_CRCCALCULATION_DISABLE;//关闭硬件CRC校验
    SPI_Handler[SPIPort].Init.CRCPolynomial=7;                  //CRC值计算的多项式
    HAL_SPI_Init(&SPI_Handler[SPIPort]);//初始化
    
    __HAL_SPI_ENABLE(&SPI_Handler[SPIPort]);                    //使能SPI2

}

static bool_t __SPI_BusCsActive(tagSpiReg *Reg, u8 cs)
{
    u8 SPIPort;
    for(SPIPort = 0; SPIPort < CN_SPI_NUM; SPIPort++)
    {
        if(Reg == tg_SpiReg[SPIPort])
            break;
    }
    return Board_SpiCsCtrl(SPIPort,cs,0);
}

static bool_t __SPI_BusCsInActive(tagSpiReg *Reg, u8 cs)
{
    u8 SPIPort;
    for(SPIPort = 0; SPIPort < CN_SPI_NUM; SPIPort++)
    {
        if(Reg == tg_SpiReg[SPIPort])
            break;
    }
    return Board_SpiCsCtrl(SPIPort,cs,1);
}

static bool_t __SPI_TxRxPoll(tagSpiReg *Reg,u8 *srcAddr,u32 wrSize,
        u8 *destAddr, u32 rdSize,u32 recvoff,u8 cs)
{
    u32 i,len_limit;
    u32 SPIPort = 0;
    u8 temp;
    u8 temp1 = 0;
    SPIPort = __SPI_GetPoart(Reg);

    if( (!srcAddr) || ((rdSize != 0) && (!destAddr)))
        return false;

    Reg->CR1 |= SPI_CR1_SPE;

    len_limit = MAX(wrSize, rdSize + recvoff);

    for (i=0;i<len_limit;i++)
    {
        if (i<wrSize)
        {
            // __SPI_Write(Reg,srcAddr[i]);
            HAL_SPI_TransmitReceive(&SPI_Handler[SPIPort], &srcAddr[i], &temp, 1, HAL_MAX_DELAY);
        }
        else if((i>=wrSize)&&(i<len_limit))
        {
        //   __SPI_Write(Reg,0);
            if((destAddr) && (i>=recvoff))
            {
                // destAddr[i-recvoff] = __SPI_Read(Reg);
                HAL_SPI_TransmitReceive(&SPI_Handler[SPIPort], &temp1, &destAddr[i-recvoff], 1, HAL_MAX_DELAY);
            }
            else
            {
                HAL_SPI_TransmitReceive(&SPI_Handler[SPIPort], &temp1, &temp, 1, HAL_MAX_DELAY);
            }
        }

    }
    return true;

}
