==> china-djyos/djyos/bsp/cpudrv/Atmel/Sam4s/src/spi/cpu_peri_spi.c <==
#include "string.h"
#include "cpu_peri.h"
#include "spibus.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_SPI    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_SPI_BUF_LEN              128           //"缓冲区大小",
#define CFG_SPI_DMA_BUF_LEN          128           //"DMA缓冲区大小",
#define CN_SPI_BASE        0x40008000

static void __SPI_SetClk(volatile tagSpiReg *Reg,u8 cs,u32 Fre)
{
    if(cs > CN_CS_MAX)
        return;

    Reg->SPI_CSR[cs] |= SPI_CSR_SCBR(CN_CFG_MCLK/Fre);
}

static void __SPI_Config(volatile tagSpiReg *Reg,u8 cs,tagSpiConfig *ptr)
{
    if(cs > CN_CS_MAX)
        return;
    __SPI_SetClk(Reg,cs,ptr->Freq);

    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        Reg->SPI_CSR[cs] |= SPI_CSR_NCPHA;
    }
    else
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_NCPHA;
    }
    //set the cpol
    if(ptr->Mode & SPI_CPOL)
    {
        Reg->SPI_CSR[cs] |= SPI_CSR_CPOL;
    }
    else
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_CPOL;
    }

    if(ptr->CharLen <= 16 && ptr->CharLen >= 4)
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_BITS_Msk;
        Reg->SPI_CSR[cs] |= ptr->CharLen - 8;
    }
}

static void __SPI_HardConfig(void)
{
    tagSpiReg *Reg;
    u32 temp,Fre;

    Reg = (tagSpiReg *)CN_SPI_BASE;
    //配置SPI使用GPIO引脚
    __SPI_GpioInit();

    Reg->SPI_CR = SPI_CR_SPIDIS|SPI_CR_SWRST;           //复位控制器
    Reg->SPI_MR = SPI_MR_MSTR|SPI_MR_MODFDIS|SPI_MR_DLYBCS(128);

    //默认使用4M波特率
    Fre = 4*1000*1000;
    for(temp = 0; temp < 4; temp ++)
    {
        Reg->SPI_CSR[temp] = SPI_CSR_CSAAT|SPI_CSR_SCBR(CN_CFG_MCLK/Fre);
    }
    //使用DMA方式
//    Reg->SPI_PTCR = SPI_PTCR_RXTEN | SPI_PTCR_TXTEN;
    Reg->SPI_TCR   = 0;
    Reg->SPI_TNCR  = 0;
    Reg->SPI_RCR   = 0;
    Reg->SPI_RNCR  = 0;

    Reg->SPI_CR = SPI_CR_SPIEN;
}

static bool_t __SPI_BusCsActive(tagSpiReg *Reg, u8 cs)
{
//  s_ChipSelect = cs;
    Reg->SPI_TDR |= SPI_TDR_PCS(cs);
    Reg->SPI_MR  &= ~SPI_MR_PCS(0x0F);
    Reg->SPI_MR  |= SPI_MR_PCS(cs);
    return true;
}

static bool_t __SPI_BusCsInActive(tagSpiReg *Reg, u8 cs)
{
    Reg->SPI_CR = SPI_CR_LASTXFER | SPI_CR_SPIDIS;
    return false;
}

static bool_t __SPI_TxRxPoll(tagSpiReg *Reg,u8 *srcAddr,u32 wrSize,
        u8 *destAddr, u32 rdSize,u32 recvoff,u8 cs)
{
    u32 i,len_limit;
    if(!srcAddr)
        return false;

    Reg->SPI_CR |= SPI_CR_SPIEN;
    len_limit = MAX(wrSize, rdSize + recvoff);
    for (i=0;i<len_limit;i++)
    {
        if (i<wrSize)
        {
            __SPI_Write(Reg,cs,srcAddr[i]);
        }
        else if((i>=wrSize)&&(i<len_limit))
        {
          __SPI_Write(Reg,cs,0);
        }
        if((destAddr) && (i>=recvoff) )
        {
            destAddr[i-recvoff] = __SPI_Read(Reg);
        }
        else
        {
            __SPI_Read(Reg);
        }
    }

    return true;
}
